src/snapshots/afrotd__parser__tests__rule_2.16.4.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 16
  - 4
title: Place Kick
text: "\ta) Ein Fieldgoal Place Kick ist ein Kick durch einen Spieler des ballbesitzenden Teams, während der Ball auf dem Boden oder einem Kicking Tee von einem Mitspieler kontrolliert wird (Regel 2.16.9).\n\tb) Ein Kicking Tee ist eine Vorrichtung, durch die der Ball zum Zwecke des Kickens erhöht wird. Bei der Benutzung des Kicking Tees darf der Ball mit seiner niedrigsten Stelle nicht mehr als 2,5 cm vom Boden entfernt sein. Außerdem muss das Kicking Tee Kontakt zum Ball haben, damit der Place Kick legal ist (A.R. 2.16.4.I).\n\tc) Ein Free Kick Place Kick ist ein Kick durch einen Spieler des ballbesitzenden Teams, während der Ball auf dem Boden oder einem Kicking Tee platziert ist. Der Ball kann von einem Mitspieler auf dem Boden oder dem Kicking Tee gehalten werden. Der Ball kann auf dem Boden mit Kontakt zum Tee platziert werden.\n\td) Es dürfen keine Materialien oder Vorrichtungen benutzt werden, um den Punkt eines Scrimmage Place Kicks zu markieren oder zu erhöhen. Das ist ein Live Ball Foul beim Snap (Regel 6.3.10.d) (Ausnahme: Regel 2.16.4.a)."
interpretations: []
