src/snapshots/afrotd__parser__tests__rule_2.16.6.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 16
  - 6
title: Kickoff
text: "Ein Kickoff ist ein Free Kick, mit dem jede Halbzeit startet und der jedem Try oder Fieldgoal folgt (Ausnahme: in Extraperioden). Es muss ein Place Kick oder ein Drop Kick sein."
interpretations: []
