src/snapshots/afrotd__parser__tests__rule_2.16.9.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 16
  - 9
title: Fieldgoalversuch
text: Ein Fieldgoalversuch ist ein Scrimmage Kick. Es kann ein Place Kick oder ein Drop Kick sein.
interpretations: []
