src/snapshots/afrotd__parser__tests__rule_2.19.1.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 19
  - 1
title: Passen
text: "Passen bedeutet den Ball werfen. Ein Pass bleibt solange ein Pass, bis er durch einen Spieler gefangen oder abgefangen oder dead wird."
interpretations: []
