src/snapshots/afrotd__parser__tests__rule_2.19.3.snap
---
source: src/parser.rs
expression: rule
snapshot_kind: text
---
article_nr:
  - 2
  - 19
  - 3
title: Überqueren der neutralen Zone
text: "\ta) Ein legaler Vorwärtspass hat die neutrale Zone überquert, wenn er zuerst den Boden, einen Spieler, einen Schiedsrichter oder irgendetwas inbounds und jenseits der neutralen Zone berührt. Der Vorwärtspass hat die neutrale Zone nicht überquert, wenn er zuerst den Boden, einen Spieler, einen Schiedsrichter oder irgendetwas inbounds in oder hinter der neutralen Zone berührt.\n\tb) Ein Spieler hat die neutrale Zone überquert, wenn sein gesamter Körper sich jenseits der neutralen Zone befunden hat.\n\tc) Ein legaler Vorwärtspass befindet sich an dem Punkt jenseits oder hinter der neutralen Zone, an dem er eine Seitenlinie überquert."
interpretations: []
